Create / POST route for sign in route
- Validate and sanitise username and password
- Validation errors --> re-render form & display errors
- Login errors --> re-render form & display information to user
- Successful login --> redirect user to homepage

--- a/views/signin_form.pug
+++ b/views/signin_form.pug
@@ -12,6 +12,9 @@ block content
       input#password(type="password" name="password" required="true")
     button(type="submit") Sign In
   
+  if(authError)
+    p= authError
+
   h3 Or, if you do not yet have an account, create a new account instead: 
   a(href="/sign-up")
     button Create Account
