--- a/views/index.pug
+++ b/views/index.pug
@@ -1,7 +1,6 @@
 extends layout
 
 block content
-  p Welcome to #{title}
-  if (user)
-    //- ...
-    
+  if (currentUser)
+    h2 Welcome back #{currentUser.first_name} #{currentUser.last_name}!
+
