--- a/views/newmessage_form.pug
+++ b/views/newmessage_form.pug
@@ -2,3 +2,18 @@ extends layout
 
 block content
   h1 Create a new message
+  if (currentUser)
+    form(action="" method="POST")
+      label(for="title") Title:
+      input#title(name="title" required=true value=message ? message.title : "")
+      br
+      label(for="text") Text:
+      textarea#text(name="text" required=true) #{message ? message.text : ""}
+      br
+    button(type="submit") Submit New Message
+  else
+    p You must be signed in to create new messages.
+  hr
+  a(href="/")
+    button Return to Home
+  
