--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -6,3 +6,58 @@ body {
 a {
     color: #00B7FF;
 }
+
+.message-list {
+    display: flex;
+    flex-direction: column;
+    gap: 1rem;
+
+    padding: 0rem;
+    margin: 0rem;
+}
+
+.message {
+    display: grid;
+    grid-template-columns: repeat(2, auto) 1fr;
+    grid-template-rows: repeat(3, auto);
+    align-items: center;
+    gap: 0.8rem;
+
+    border: 0.2rem solid rgba(0, 0, 0, 0.2);
+    border-radius: 0.5rem;
+
+    padding: 0.5rem;
+    margin: 0rem;
+}
+
+.message-title,
+.message-date-posted,
+.message-author,
+.message-text {
+    padding: 0rem;
+    margin: 0rem;
+}
+
+.message-title {
+    grid-area: 1 / 1 / 2 / 2;
+
+    font-size: 1.2rem;
+}
+
+.message-date-posted {
+    grid-area: 1 / 2 / 2 / 3;
+
+    font-size: 0.8rem;
+}
+
+.message-author {
+    grid-area: 2 / 1 / 3 / -1;
+    
+    font-size: 1.0rem;
+}
+
+.message-text {
+    grid-area: 3 / 1 / -1 / -1;
+    
+    font-size: 1.1rem;
+}
