Add button to redirect user to sign-in page if needed

--- a/views/index.pug
+++ b/views/index.pug
@@ -8,6 +8,8 @@ block content
       button Create a New Message
   else
     h2 You must be signed in to post messages.
+    a(href="/sign-in")
+      button Sign In
   hr
   h3 Messages:
   if (messages)
