--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -17,10 +17,8 @@ a {
 }
 
 .message {
-    display: grid;
-    grid-template-columns: repeat(2, auto) 1fr;
-    grid-template-rows: repeat(3, auto);
-    align-items: center;
+    display: flex;
+    flex-direction: column;
     gap: 0.8rem;
 
     border: 0.2rem solid rgba(0, 0, 0, 0.2);
@@ -30,34 +28,38 @@ a {
     margin: 0rem;
 }
 
+.message-information {
+    display: flex;
+    flex-wrap: wrap;
+    align-items: center;
+    gap: 1.2rem;
+}
+
 .message-title,
 .message-date-posted,
 .message-author,
+.message-author-failed,
 .message-text {
     padding: 0rem;
     margin: 0rem;
 }
 
 .message-title {
-    grid-area: 1 / 1 / 2 / 2;
-
     font-size: 1.2rem;
 }
 
 .message-date-posted {
-    grid-area: 1 / 2 / 2 / 3;
-
-    font-size: 0.8rem;
-}
-
-.message-author {
-    grid-area: 2 / 1 / 3 / -1;
-    
     font-size: 1.0rem;
 }
 
+.message-author {
+    font-size: 1.0rem;
+}
+.message-author-failed {
+    color: rgba(36, 36, 36, 1);
+    font-size: 0.8rem;
+}
+
 .message-text {
-    grid-area: 3 / 1 / -1 / -1;
-    
     font-size: 1.1rem;
 }
