Add user's membership status info to homepage

--- a/views/index.pug
+++ b/views/index.pug
@@ -6,6 +6,10 @@ block content
     h2 Welcome back #{currentUser.first_name} #{currentUser.last_name}!
     a(href="/new-message")
       button Create a New Message
+    if (!currentUser.member)
+      p It appears you are not yet a member. Without member status, you will not be able to see the author of messages.
+      a(href="/membership")
+        button Become a Member
   else
     h2 You must be signed in to post messages.
     a(href="/sign-in")
