--- a/views/membership.pug
+++ b/views/membership.pug
@@ -7,6 +7,9 @@ block content
     form(action="" method="POST")
       input#password(name="password" type="password" required=true)
       button(type="submit") Submit
+    if (errors)
+      for error in errors
+        p= error.msg
   else
     p You must be signed in to become a member.
     a(href="/sign-in")
