Display user's admin status on homepage

--- a/views/index.pug
+++ b/views/index.pug
@@ -10,6 +10,10 @@ block content
       p It appears you are not yet a member. Without member status, you will not be able to see the author of messages.
       a(href="/membership")
         button Become a Member
+    if (!currentUser.admin)
+      p It appears you are not an administrator. Without administrator status, you will not be able to delete messages.
+      a(href="/administrator")
+        button Become an Administrator
   else
     h2 You must be signed in to post messages.
     a(href="/sign-in")
