--- a/views/index.pug
+++ b/views/index.pug
@@ -4,6 +4,8 @@ block content
   h1 Welcome to the Secret Clubhouse!
   if (currentUser)
     h2 Welcome back #{currentUser.first_name} #{currentUser.last_name}!
+    a(href="/sign-out")
+      button Sign Out
     a(href="/new-message")
       button Create a New Message
     if (!currentUser.member)
