Create new style rules for signed-in user options

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -7,6 +7,12 @@ a {
     color: #00B7FF;
 }
 
+.signed-in-user-options {
+    display: flex;
+    flex-direction: column;
+    gap: 0.6rem;
+}
+
 .message-list {
     display: flex;
     flex-direction: column;
