Add delete button to messages for admins and update message styles

--- a/views/index.pug
+++ b/views/index.pug
@@ -26,15 +26,19 @@ block content
     ul.message-list(style={"list-style": "none"})
       for message in messages
         li.message
-          div.message-information
-            h4.message-title= message.title
-            h5.message-date-posted Date Posted: #{message.date_posted_formatted}
-            if (currentUser)
-              if (currentUser.member)
-                h5.message-author Posted by: #{`${message.author.first_name} ${message.author.last_name}`}
+          div.message-top-row
+            div.message-information
+              h4.message-title= message.title
+              h5.message-date-posted Date Posted: #{message.date_posted_formatted}
+              if (currentUser)
+                if (currentUser.member)
+                  h5.message-author Posted by: #{`${message.author.first_name} ${message.author.last_name}`}
+                else
+                  h5.message-author-failed Become a member to see the author of this message
               else
-                h5.message-author-failed Become a member to see the author of this message
-            else
-              h5.message-author-failed Log in to see the author of this message
+                h5.message-author-failed Log in to see the author of this message
+            if(currentUser && currentUser.admin)
+              a.message-delete(href=`/delete-message/${message.url}`)
+                button Delete
           p.message-text= message.text
 
