--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -34,6 +34,12 @@ a {
     margin: 0rem;
 }
 
+.message-top-row {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+}
+
 .message-information {
     display: flex;
     flex-wrap: wrap;
