--- a/views/membership.pug
+++ b/views/membership.pug
@@ -3,13 +3,16 @@ extends layout
 block content
   h3 Become a member
   if (currentUser)
-    p To become a member, enter the secret passcode into the box below:
-    form(action="" method="POST")
-      input#password(name="password" type="password" required=true)
-      button(type="submit") Submit
-    if (errors)
-      for error in errors
-        p= error.msg
+    if (!currentUser.member)
+      p To become a member, enter the secret passcode into the box below:
+      form(action="" method="POST")
+        input#password(name="password" type="password" required=true)
+        button(type="submit") Submit
+      if (errors)
+        for error in errors
+          p= error.msg
+    else
+      p You are already a member.
   else
     p You must be signed in to become a member.
     a(href="/sign-in")
